welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:2: error: not found: type Boulean
	def ordre(a:Int, b:Int, c:Int):Boulean = {
                                       ^inOrderEqual:5: error: not found: value equalOK
	if (!equalOK) {
             ^